# Jellyfish3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  MakefileOLD  README.md  TODO.txt  build.sh  imgui.ini  main.cpp  premake5.lua  results.json  run.py  run.sh  testApp.old
App/: AppBoids.cpp  Boids.cpp
App/classes/: Boids.h
BoidsApp/: BoidsApp.cpp
BoidsApp/classes/: Boids.cpp  Boids.h
Examples/: CMakeLists.txt
Examples/Boids/: CMakeLists.txt
Examples/Boids/src/: Boids.cpp  Boids.h  BoidsApp.cpp  Debug.h
Examples/Sandbox/: CMakeLists.txt
Examples/Sandbox/src/: Sandbox.cpp
Jellyfish3D/: CMakeLists.txt  imgui.ini
Jellyfish3D/resources/: ground.mtl  newship.mtl  ship.mtl  test_ship.mtl
Jellyfish3D/resources/textures/skybox/: irrad_negx.hdr  irrad_negz.hdr  rad_negx.hdr  rad_posx.hdr
Jellyfish3D/src/: App.hpp  AuxFunctions.cpp  AuxFunctions.hpp  Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  Components.cpp  Components.hpp  Display.cpp  Display.hpp  GUI.cpp  GUI.hpp  Jellyfish3D.hpp  KeyStates.cpp  KeyStates.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  PrimitiveStructs.hpp  Renderer.cpp  Renderer.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Timer.cpp  main.cpp
SandboxApp/: SandboxApp.cpp
include/imgui/: imconfig.h
include/jellyfish/: Camera.hpp  Components.hpp  GUI.hpp  Jellyfish3D.hpp  Material.hpp  Mesh.hpp  Objects.hpp  Renderer.hpp  Resources.hpp  Scene.hpp  Timer.hpp
resources/: Caesar.mtl  resources.rar  tower.mtl
resources/textures/skybox/: irrad_negy.hdr  irrad_posx.hdr  irrad_posy.hdr  irrad_posz.hdr  rad_negy.hdr  rad_negz.hdr  rad_posy.hdr  rad_posz.hdr
shaders/: default_fragment.glsl  light_fragment.glsl  skybox_vertex.glsl
src/jellyfish/: App.cpp  App.hpp  AuxFunctions.cpp  Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  Components.cpp  Components.hpp  Display.cpp  Display.hpp  GUI.cpp  GUI.hpp  Jellyfish3D.hpp  KeyStates.cpp  KeyStates.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Objects.hpp  OldFunctions.cpp  Renderer.cpp  Renderer.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Ship.hpp  Skybox.cpp  Skybox.hpp  Timer.cpp  Transform.cpp  UserControl.cpp
testingGLFWandGlad/: main.cpp
